Display relevant help messages on hover

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,9 @@
             </div>
           </article>
           <article class='activity-numbers widget'>
+            <aside class="help-tip">
+              <p>How do you compare to the other users on GitFit? These numbers are your rankings in each category for TODAY only.</p>
+            </aside>
             <h3 class='widget-heading'>Activity Rankings</h3>
             <div class='activity-numbers_stats'>
               <div class='bottom-stats'>
@@ -58,6 +61,9 @@
           </article>
         </div>
         <article class='activity-data-week widget'>
+          <aside class="help-tip">
+            <p>Try clicking on the name of a stat in the chart legend -- you can hide the datasets that you don't want to see!</p>
+          </aside>
           <canvas id='activity-data-week_chart'></canvas>
         </article>
       </section>
@@ -68,6 +74,9 @@
           </canvas>
         </article>
         <article class='hydration-data-today widget'>
+          <aside class="help-tip">
+            <p>We assume that your hydration goal is 80 ounces/day. That's 10 cups!</p>
+          </aside>
           <div class='hydration-doughnut-wrapper'>
             <canvas id='hydration-data_today_chart'></canvas>
           </div>
@@ -90,9 +99,6 @@
             <p id='sleep-data-last-night-quality_value' class='sleep-doughnut-headline'>X out of 5</p>
           </article>
           <article class='sleep-data-doughnut widget'>
-            <aside class="help-tip">
-              <p>This is the inline help tip! It can contain all kinds of HTML. Style it as you please.</p>
-            </aside>
             <h3 class='widget-heading'>Average Sleep</h3>
             <p class ='sleep-hours'>Average Hours</p>
             <h2 class ='sleep-hours-number' id='sleep-data-all-time-hours_number'></h2>
