Arrange widgets for medium screen

--- a/src/index.html
+++ b/src/index.html
@@ -23,16 +23,16 @@
               <div class='bottom-stats'>
                 <span class='activity-data_activity-minutes'>
                   <h2 class='minutes' id='activity-data_today-minutes'></h2>
-                  <h5>Active Minutes</h5>
+                  <h5 class='label'>Active Minutes</h5>
                 </span>
                 <span class='activity-data_distance'>
                   <h2 class='distance' id='activity-data_today-distance'></h2>
-                  <h5>Miles Walked</h5>
+                  <h5 class='label'>Miles Walked</h5>
                 </span>
               </div>
               <span class='activity-data_steps'>
                 <h2 class='steps' id='activity-data_today-steps'></h2>
-                <h5>Steps</h5>
+                <h5 class='label'>Steps</h5>
               </span>
             </div>
           </article>
@@ -42,16 +42,16 @@
               <div class='bottom-stats'>
                 <span class='activity-data_activity-minutes'>
                   <h2 class='minutes' id='activity-data_rank-minutes'></h2>
-                  <h5>in Active Minutes</h5>
+                  <h5 class='label'>in Active Minutes</h5>
                 </span>
                 <span class='activit1-data_distance'>
                   <h2 class='stairs' id='activity-data_rank-distance'></h2>
-                  <h5>in Stairs Climbed</h5>
+                  <h5 class='label'>in Stairs Climbed</h5>
                 </span>
               </div>
               <span class='activity-data_steps'>
                 <h2 class='steps' id='activity-data_rank-steps'></h2>
-                <h5>in Steps</h5>
+                <h5 class='label'>in Steps</h5>
               </span>
               </div>
             </div>
