--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
             </div>
           </article>
           <article class='activity-numbers widget'>
-            <aside class="help-tip">
+            <aside class='help-tip ranking-tip'>
               <p>How do you compare to the other users on GitFit? These numbers are your rankings in each category for TODAY only.</p>
             </aside>
             <h3 class='widget-heading'>Activity Rankings</h3>
