Add new src for chart.js filepath

--- a/src/index.html
+++ b/src/index.html
@@ -118,6 +118,7 @@
           <h3 class='user-info-item' id='user-friends-list'>Friends List</h3>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script type="text/javascript" src="../data/users.js"></script>
     <script type="text/javascript" src="../data/hydration.js"></script>
     <script type="text/javascript" src="../data/sleep.js"></script>
@@ -127,7 +128,7 @@
     <script type="text/javascript" src="../src/UserRepository.js"></script>
     <script type="text/javascript" src="../src/SleepRepository.js"></script>
     <script type="text/javascript" src="../src/ActivityRepository.js"></script>
-    <script type="text/javascript" src="../node_modules/chart.js/dist/Chart.js"></script>
+    <!-- <script type="text/javascript" src="../node_modules/chart.js/dist/Chart.js"></script> -->
     <script type="text/javascript" src="../src/charts.js"></script>
     <script type="text/javascript" src="./scripts.js"></script>
   </body>
