Add total users to rank hover message

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
           </article>
           <article class='activity-numbers widget'>
             <aside class='help-tip ranking-tip'>
-              <p>How do you compare to the other users on GitFit? These numbers are your rankings in each category for TODAY only.</p>
+              <p>How do you compare to the other 50 users on GitFit? These numbers are your rankings in each category for TODAY only.</p>
             </aside>
             <h3 class='widget-heading'>Activity Rankings</h3>
             <div class='activity-numbers_stats'>
