--- a/src/index.html
+++ b/src/index.html
@@ -113,19 +113,19 @@
     </main>
     <footer class='user-info'>
         <h2 class='user-info_content_title'>Your Info</h2>
-        <div class='info-box'>
+        <section class='info-box'>
           <h4>Name:</h4>
           <h3 class='user-info-item' id='user-name'>Name</h3>
-        </div>
-        <div class='info-box'>
+        </section>
+        <section class='info-box'>
           <h4>Step Goal:</h4>
           <h3 class='user-info-item' id='user-step-goal'>Daily Step Goal</h3>
           <p class='user-info-item' id='user-step-goal_comparison'>Step Goal Comparison</p>
-        </div>
-        <div class='info-box'>
+        </section>
+        <section class='info-box'>
           <h4>Friends:</h4>
           <h3 class='user-info-item' id='user-friends-list'>Friends List</h3>
-        </div>
+        </section>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script type="text/javascript" src="../data/users.js"></script>
