Put id's before classes

--- a/src/index.html
+++ b/src/index.html
@@ -23,16 +23,16 @@
             <div class='activity-numbers_stats'>
               <div class='bottom-stats'>
                 <span class='activity-data_activity-minutes'>
-                  <h2 class='minutes' id='activity-data_today-minutes'></h2>
+                  <h2 id='activity-data_today-minutes' class='minutes'></h2>
                   <h5 class='label'>Active Minutes</h5>
                 </span>
                 <span class='activity-data_distance'>
-                  <h2 class='distance' id='activity-data_today-distance'></h2>
+                  <h2 id='activity-data_today-distance' class='distance'></h2>
                   <h5 class='label'>Miles Walked</h5>
                 </span>
               </div>
               <span class='activity-data_steps'>
-                <h2 class='steps' id='activity-data_today-steps'></h2>
+                <h2 id='activity-data_today-steps' class='steps'></h2>
                 <h5 class='label'>Steps</h5>
               </span>
             </div>
@@ -45,16 +45,16 @@
             <div class='activity-numbers_stats'>
               <div class='bottom-stats'>
                 <span class='activity-data_activity-minutes'>
-                  <h2 class='minutes' id='activity-data_rank-minutes'></h2>
+                  <h2 id='activity-data_rank-minutes' class='minutes'></h2>
                   <h5 class='label'>in Active Minutes</h5>
                 </span>
                 <span class='activit1-data_distance'>
-                  <h2 class='stairs' id='activity-data_rank-distance'></h2>
+                  <h2 id='activity-data_rank-distance' class='stairs'></h2>
                   <h5 class='label'>in Stairs Climbed</h5>
                 </span>
               </div>
               <span class='activity-data_steps'>
-                <h2 class='steps' id='activity-data_rank-steps'></h2>
+                <h2 id='activity-data_rank-steps' class='steps'></h2>
                 <h5 class='label'>in Steps</h5>
               </span>
               </div>
@@ -89,8 +89,8 @@
               <p>GitFit recommends you aim for at least 8 hours of high-quality sleep a night. Our 'quality' metric is on a scale of 1-5 and is based on your self-reports.</p>
             </aside>
             <h3 class='widget-heading'>Last Night's Sleep</h3>
-            <p class ='sleep-hours'>Hours</p>
-            <h2 class ='sleep-hours-number' id='sleep-data-last-night-hours_number'></h2>
+            <p class='sleep-hours'>Hours</p>
+            <h2 id='sleep-data-last-night-hours_number' class='sleep-hours-number'></h2>
             <div class='sleep-doughnut-wrapper'>
               <canvas id='sleep-data-last-night-quality_chart'></canvas>
             </div>
@@ -98,8 +98,8 @@
           </article>
           <article class='sleep-data-doughnut widget'>
             <h3 class='widget-heading'>Average Sleep</h3>
-            <p class ='sleep-hours'>Average Hours</p>
-            <h2 class ='sleep-hours-number' id='sleep-data-all-time-hours_number'></h2>
+            <p class='sleep-hours'>Average Hours</p>
+            <h2 id='sleep-data-all-time-hours_number' class='sleep-hours-number'></h2>
             <div class='sleep-doughnut-wrapper'>
               <canvas id='sleep-data-all-time-quality_chart'></canvas>
             </div>
@@ -115,16 +115,16 @@
         <h2 class='user-info_content_title'>Your Info</h2>
         <section class='info-box'>
           <h4>Name:</h4>
-          <h3 class='user-info-item' id='user-name'>Name</h3>
+          <h3 id='user-name' class='user-info-item'>Name</h3>
         </section>
         <section class='info-box'>
           <h4>Step Goal:</h4>
-          <h3 class='user-info-item' id='user-step-goal'>Daily Step Goal</h3>
-          <p class='user-info-item' id='user-step-goal_comparison'>Step Goal Comparison</p>
+          <h3 id='user-step-goal' class='user-info-item'>Daily Step Goal</h3>
+          <p id='user-step-goal_comparison' class='user-info-item'>Step Goal Comparison</p>
         </section>
         <section class='info-box'>
           <h4>Friends:</h4>
-          <h3 class='user-info-item' id='user-friends-list'>Friends List</h3>
+          <h3 id='user-friends-list' class='user-info-item'>Friends List</h3>
         </section>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
