CHange hydration donut height

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     </header>
     <main>
 <!-- Activity Widgets  -->
-      <section class='activity genre'>
+      <section class='genre'>
         <div class='small-widgets'>
           <article class='activity-numbers widget'>
             <h3 class='widget-heading'>Activity Today</h3>
@@ -82,7 +82,7 @@
         </article>
       </section>
 <!-- Sleep Widgets -->
-      <section class='sleep genre'>
+      <section class='genre'>
         <div class='small-widgets'>
           <article class='sleep-data-doughnut widget'>
             <aside class="help-tip">
