Remove unnecessary styling and format element orders

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     </header>
     <main>
 <!-- Activity Widgets  -->
-      <section class='genre'>
+      <section class='category'>
         <div class='small-widgets'>
           <article class='activity-numbers widget'>
             <h3 class='widget-heading'>Activity Today</h3>
@@ -69,7 +69,7 @@
         </article>
       </section>
 <!-- Hydration Widgets -->
-      <section class='hydration genre'>
+      <section class='hydration category'>
         <article class='hydration-data-week widget'>
           <canvas id='hydration-data-week_chart' class='hydration-data-week_chart'>
           </canvas>
@@ -82,7 +82,7 @@
         </article>
       </section>
 <!-- Sleep Widgets -->
-      <section class='genre'>
+      <section class='category'>
         <div class='small-widgets'>
           <article class='sleep-data-doughnut widget'>
             <aside class="help-tip">
